fix blog post heading text-align

--- a/src/styles/templates/BlogPostTemplate.module.scss
+++ b/src/styles/templates/BlogPostTemplate.module.scss
@@ -8,7 +8,7 @@
 .post {
   margin: 80px 20% 30px;
 
-  h2 {
+  h1 {
     font-size: rem(38px);
     font-weight: 500;
     text-align: center;
